Updating pod template to incorporate liveness-readiness probe, initContainer, volumeMounts & k8 commands to include metricServer

--- a/command_yamls/k8_commands.yaml
+++ b/command_yamls/k8_commands.yaml
@@ -75,6 +75,10 @@ describe pod:
 
 get logs:
   kubectl logs podname 
+  multi-container pod:
+    kubectl logs pod -c container
+  streaming logs:
+    kubectl logs -f pod -c container
 
 
 interactive shell for a pod:
