--- a/command_yamls/k8_commands.yaml
+++ b/command_yamls/k8_commands.yaml
@@ -23,6 +23,11 @@ get_objects:
     kubectl get serviceaccount
     describe:
       kubectl describe serviceaccount serviceaccount-name
+  jobs:
+    kubectl get jobs
+  cronjob:
+    kubectl get cronjobs
+
 
 delete object:
   kubectl delete object object_name
@@ -39,6 +44,8 @@ create a new pod:
 
 create a new deployment:
   kubectl create deployment <deployment name> --image=image_name --replicas=replica-count --port=forwarding-port
+  set / update the image in a deployment:
+    kubectl det image deployment deployment-name container-name=new-image
 
 create element from a file:
   kubectl create -f <filename>
@@ -119,3 +126,27 @@ taint nodes:
 label nodes:
   kubectl label nodes node-name label_key:label_value
 
+
+
+metric Server:
+  clone:
+    git clone https://github.com/kodekloudhub/kubernetes-metrics-server.git
+  setup:
+    kubectl create -f .
+  get node level metrics:
+    kubectl top nodes
+  get pod level metrics:
+    kubectl top pods 
+
+
+rollout:
+  status:
+    kubectl rollout status <deployment deployment-name> / <deployment/deployment-name>
+    get status of a specific revision:
+      kubectl rollout status deployment deployment-name --revision=1
+  history:
+    kubectl rollout history deployment-name
+  rollback:
+    kubectl rollout undo deployment-name
+    rollback to a specific revision:
+      kubectl rollout undo deployment-name --to-revision=1
